first changes to indian touch

--- a/site/index.html
+++ b/site/index.html
@@ -4,8 +4,8 @@
     <meta charset='utf-8' />
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' />
     <title>Ruby Australia</title>
-    <meta content='Ruby Australia' name='description' />
-    <meta content='ruby, rails, australia, melbourne, sydney, canberra, perth, central coast, brisbane, perth, western australia, sa, south australia, victoria, new south wales, nsw, vic, qld, queensland, wa, can, programming, meetup, group, user group, conferences, events' name='keywords' />
+    <meta content='Ruby India' name='description' />
+    <meta content='ruby, rails, india, bangalore, hyderabad, pune, mumbai, chennai, delhi, ahmedabad, kochi, mangalore, jaipur, lucknow, kolkata, karnataka, andhra, tamil, punjab, rajasthan, delhi, kerela, maharashtra, gujarat, can, programming, meetup, group, user group, conferences, events' name='keywords' />
     <meta content='width=device-width' name='viewport' />
     <link href='/css/screen.css' rel='stylesheet' />
     <script src='/js/modernizr.min.js'></script>
@@ -13,7 +13,7 @@
   <body>
     <header role='banner'>
       <a href='/'>
-        <span class='logo'>Ruby Australia</span>
+        <span class='logo'>Ruby India</span>
       </a>
     </header>
     <aside id='meta'>
@@ -29,13 +29,13 @@
         </ul>
       </nav>
       <p>
-        Twitter: <a href="http://twitter.com/rubyaustralia">@rubyaustralia</a>
+        Twitter: <a href="http://twitter.com/rubyindia">@rubyindia</a>
       </p>
     </aside>
     <section role='main'>
       <p id='mission-statement'>
-        The founding purpose of Ruby Australia is to further the use and adoption of
-        the Ruby programming language in Australia, and to support and encourage a
+        The founding purpose of Ruby India is to further the use and adoption of
+        the Ruby programming language and its frameworks in Indian subcontinent, and to support and encourage a
         vibrant community around the language and related technologies.
       </p>
       <section id='meetups'>
@@ -47,47 +47,47 @@
         </p>
         <ul class='meetup-locations'>
           <li>
-            <a href='/meetups/adl.html' id='adl'>Adelaide</a>
+            <a href='/meetups/adl.html' id='adl'>Bangalore</a>
           </li>
           <li>
-            <a href='/meetups/bne.html' id='bne'>Brisbane</a>
+            <a href='/meetups/bne.html' id='bne'>Pune</a>
           </li>
           <li>
-            <a href='/meetups/can.html' id='can'>Canberra</a>
+            <a href='/meetups/can.html' id='can'>Delhi NCR</a>
           </li>
           <li>
-            <a href='/meetups/mel.html' id='mel'>Melbourne</a>
+            <a href='/meetups/mel.html' id='mel'>Hyderabad</a>
           </li>
           <li>
-            <a href='/meetups/per.html' id='per'>Perth</a>
+            <a href='/meetups/per.html' id='per'>Chennai</a>
           </li>
           <li>
-            <a href='/meetups/syd.html' id='syd'>Sydney</a>
+            <a href='/meetups/syd.html' id='syd'>Kochi</a>
           </li>
         </ul>
       </section>
       <section id='railscamp'>
         <h3>Rails Camp</h3>
         <p>
-          Ruby Australia is the organising body of Australian Rails Camp events.
-          Please see the official <a href="http://railscamps.com">Rails Camp</a> site
+          Ruby India is the organising body of Indian Rails Camp events.
+          Please see the official <a href="http://railscamp.rubyin.org">Rails Camp India</a> site
           for more details.
         </p>
       </section>
       <section>
-        <h3>Join Ruby Australia</h3>
+        <h3>Join Ruby India</h3>
         <p>
-          Joining Ruby Australia is free. <a href="/join-ruby-australia.html">Join!</a>
+          Joining Ruby India is free. <a href="/join-ruby-australia.html">Join!</a>
         </p>
         <h3>Contributing to the site</h3>
         <p>
           The site's source is hosted on Github:
-          <a href="https://github.com/rails-oceania/ruby.org.au">https://github.com/rails-oceania/ruby.org.au</a>.  Please refer to the <a href="https://github.com/rails-oceania/ruby.org.au#readme">README</a> there for more details.
+          <a href="https://github.com/chetanmittal/rubyin.org">https://github.com/chetanmittal/rubyin.org</a>.  Please refer to the <a href="https://github.com/chetanmittal/rubyin.org#readme">README</a> there for more details.
         </p>
       </section>
     </section>
     <footer role='contentinfo'>
-      <small>&copy; 2012 Ruby Australia</small>
+      <small>&copy; 2012 Ruby India</small>
     </footer>
   </body>
 </html>
