--- a/site/meetups/syd.html
+++ b/site/meetups/syd.html
@@ -4,8 +4,8 @@
     <meta charset='utf-8' />
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' />
     <title>Ruby Australia</title>
-    <meta content='Ruby Australia' name='description' />
-    <meta content='ruby, rails, australia, melbourne, sydney, canberra, perth, central coast, brisbane, perth, western australia, sa, south australia, victoria, new south wales, nsw, vic, qld, queensland, wa, can, programming, meetup, group, user group, conferences, events' name='keywords' />
+    <meta content='Ruby India' name='description' />
+    <meta content='ruby, rails, india, bangalore, hyderabad, pune, mumbai, chennai, delhi, ahmedabad, kochi, mangalore, jaipur, lucknow, kolkata, karnataka, andhra, tamil, punjab, rajasthan, delhi, kerela, maharashtra, gujarat, can, programming, meetup, group, user group, conferences, events' name='keywords' />
     <meta content='width=device-width' name='viewport' />
     <link href='/css/screen.css' rel='stylesheet' />
     <script src='/js/modernizr.min.js'></script>
@@ -13,7 +13,7 @@
   <body>
     <header role='banner'>
       <a href='/'>
-        <span class='logo'>Ruby Australia</span>
+        <span class='logo'>Ruby India</span>
       </a>
     </header>
     <aside id='meta'>
@@ -29,7 +29,7 @@
         </ul>
       </nav>
       <p>
-        Twitter: <a href="http://twitter.com/rubyaustralia">@rubyaustralia</a>
+        Twitter: <a href="http://twitter.com/rubyindia">@rubyindia</a>
       </p>
     </aside>
     <section role='main'>
@@ -70,7 +70,7 @@
       </section>
     </section>
     <footer role='contentinfo'>
-      <small>&copy; 2012 Ruby Australia</small>
+      <small>&copy; 2012 Ruby India</small>
     </footer>
   </body>
 </html>
