change to ruby india

--- a/site/index.html
+++ b/site/index.html
@@ -34,9 +34,7 @@
     </aside>
     <section role='main'>
       <p id='mission-statement'>
-        The founding purpose of Ruby India is to further the use and adoption of
-        the Ruby programming language and its frameworks in Indian subcontinent, and to support and encourage a
-        vibrant community around the language and related technologies.
+        The mission of Ruby India is to build a strong, organized and open community, in Indian subcontinent, of like minded enthusiasts who have either worked on ruby related projects or are interested to use it in future projects. The sole purpose of Ruby India is to organize formal and informal meetups such as meetings, camps, conferences, hackathons etc to build this community successfully.
       </p>
       <section id='meetups'>
         <h3>Meetups</h3>
