--- a/site/meetups/bne.html
+++ b/site/meetups/bne.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset='utf-8' />
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible' />
-    <title>Ruby Australia</title>
+    <title>Ruby India</title>
     <meta content='Ruby India' name='description' />
     <meta content='ruby, rails, india, bangalore, hyderabad, pune, mumbai, chennai, delhi, ahmedabad, kochi, mangalore, jaipur, lucknow, kolkata, karnataka, andhra, tamil, punjab, rajasthan, delhi, kerela, maharashtra, gujarat, can, programming, meetup, group, user group, conferences, events' name='keywords' />
     <meta content='width=device-width' name='viewport' />
