--- a/site/index.html
+++ b/site/index.html
@@ -29,7 +29,7 @@
         </ul>
       </nav>
       <p>
-        Twitter: <a href="http://twitter.com/rubyindia">@rubyindia</a>
+        Twitter: <a href="http://twitter.com/rubyindia">@rubyinorg</a>
       </p>
     </aside>
     <section role='main'>
