--- a/site/index.html
+++ b/site/index.html
@@ -34,7 +34,7 @@
     </aside>
     <section role='main'>
       <p id='mission-statement'>
-        The mission of Ruby India is to build a strong, organized and open community, in Indian subcontinent, of like minded enthusiasts who have either worked on ruby related projects or are interested to use it in future projects. The sole purpose of Ruby India is to organize formal and informal meetups such as meetings, camps, conferences, hackathons etc to build this community successfully.
+        The founding purpose of Ruby India is to build a strong, organized and open community around Ruby programming language and its related technologies, and to further its use and adoption in India.
       </p>
       <section id='meetups'>
         <h3>Meetups</h3>
