updated committee members page 1

--- a/site/committee-members.html
+++ b/site/committee-members.html
@@ -38,38 +38,38 @@
           <h1>Committee Members</h1>
         </header>
         <article>
-          <img src='/images/committee-members/keith-avatar.jpg' />
+          <img src='/images/committee-members/avatar.jpg' />
           <header>
-            <h3>Keith Pitty</h3>
+            <h3>Position Open</h3>
             <p class='position'>President</p>
           </header>
           <div class='bio'>
-            <p>Keith is a regular organiser of and presenter at Sydney Ruby meetups, led the organisation of Railscamp 9 at Lake Ainsworth and has committed to ensuring that the inaugural Australian Ruby Conference becomes a reality. He runs <a href="http://www.cockatoosoftware.com.au">Cockatoo Software</a>.</p>
-            <p>Away from computers, he loves sport, especially cricket, golf and Aussie Rules. Oh, and single malt whisky.</p>
+            <p>The role of President is to lead the Ruby India organization so that it achieves its goals fulfilling its sole purpose. Main responsibilities will be to manage A-Z of the organization.</p>
+            <p>There might be some travelling required.</p>
           </div>
           <div class='contact'>
-            <a href='http://twitter.com/keithpitty'>@keithpitty</a>
-            <a href='http://au.linkedin.com/in/keithpitty'>LinkedIn</a>
-            <a href='https://github.com/keithpitty'>Github</a>
+            <a href='http://twitter.com/rubyindia'>@rubyindia</a>
+            <a href='http://au.linkedin.com/in/rubyindia'>LinkedIn</a>
+            <a href='https://github.com/rubyindia'>Github</a>
           </div>
         </article>
         <article>
-          <img src='/images/committee-members/nigel-avatar.jpg' />
+          <img src='/images/committee-members/avatar.jpg' />
           <header>
-            <h3>Nigel Rausch</h3>
+            <h3>Position Open</h3>
             <p class='position'>Vice-President</p>
           </header>
           <div class='bio'>
-            <p>Nigel has a strong community spirit and is heavily involved organising Brisbane’s Ruby, Javascript and WorkAtJelly meetups as well as mentoring friends and ex-colleagues in their business ventures.</p>
-            <p>He is proud to be part of the Ruby Australia Association and is excited how it will make Ruby more visible to the wider community and to the Enterprise.</p>
+            <p>The role of Vice-President will be to work jointly with President towards achieving organizations' goals and its purpose. Main responsibilities will be to manage A-Z of the organization as second in command.</p>
+            <p>There might be some travelling required.</p>
           </div>
           <div class='contact'>
-            <a href='http://twitter.com/NR99'>@NR99</a>
-            <a href='http://www.linkedin.com/in/nigelrausch'>Linkedin</a>
+            <a href='http://twitter.com/rubyindia'>@rubyindia</a>
+            <a href='http://www.linkedin.com/in/rubyindia'>Linkedin</a>
           </div>
         </article>
         <article>
-          <img src='/images/committee-members/richie-avatar.jpg' />
+          <img src='/images/committee-members/avatar.jpg' />
           <header>
             <h3>Richie Khoo</h3>
             <p class='position'>Secretary</p>
