--- a/site/committee-members.html
+++ b/site/committee-members.html
@@ -49,7 +49,7 @@
           </div>
           <div class='contact'>
             <a href='http://twitter.com/rubyindia'>@rubyindia</a>
-            <a href='http://au.linkedin.com/in/rubyindia'>LinkedIn</a>
+            <a href='http://in.linkedin.com/in/rubyindia'>LinkedIn</a>
             <a href='https://github.com/rubyindia'>Github</a>
           </div>
         </article>
@@ -65,68 +65,39 @@
           </div>
           <div class='contact'>
             <a href='http://twitter.com/rubyindia'>@rubyindia</a>
-            <a href='http://www.linkedin.com/in/rubyindia'>Linkedin</a>
+            <a href='http://in.linkedin.com/in/rubyindia'>Linkedin</a>
           </div>
         </article>
         <article>
           <img src='/images/committee-members/avatar.jpg' />
           <header>
-            <h3>Richie Khoo</h3>
+            <h3>Position Open</h3>
             <p class='position'>Secretary</p>
           </header>
           <div class='bio'>
-            <p>Richie is a passionate Ruby Developer who recently moved to Adelaide but still moonlights in Melbourne.</p>
-            <p>A member of Inspire 9 CoWorking and co-founder of AngelCube.com Melbourne's first startup venture accelerator, he is currently working on his own startup, NakedInsights an automation tool for Financial Advisers, and has a passion for helping people bring projects to reality.</p>
+            <p>The role of Secretary is to take care of almost everything related to the functioning of organization. Main responsibilites will be to orgnaize and minute meetings, to maintain records, to uphold legal requirements, and to communicate and corrospond.</p>
+            <p>There might be some travelling required.</p>
           </div>
           <div class='contact'>
-            <a href='http://twitter.com/evolve2k'>@evolve2k</a>
-            <a href='http://au.linkedin.com/in/richiekhoo'>LinkedIn</a>
-            <a href='https://github.com/evolve2k'>Github</a>
-            <a href='http://zerply.com/richie'>Zerply</a>
+            <a href='http://twitter.com/rubyindia'>@rubyindia</a>
+            <a href='http://in.linkedin.com/in/rubyindia'>LinkedIn</a>
+            <a href='https://github.com/rubyindia'>Github</a>
+            <a href='http://zerply.com/rubyindia'>Zerply</a>
           </div>
         </article>
         <article>
-          <img src='/images/committee-members/sebastian-avatar.jpg' />
+          <img src='/images/committee-members/avatar.jpg' />
           <header>
-            <h3>Sebastian von Conrad</h3>
+            <h3>Position Open</h3>
             <p class='position'>Treasurer</p>
           </header>
           <div class='bio'>
-            <p>After growing up in Sweden, Sebastian escaped to the US in 2007 and moved down under in 2009. He now lives in Adelaide with his partner and two fur children, and works as the software development manager at <a href="http://www.echannelsearch.com">e-channel search</a>. He is also a certified baseball nut. Having organised Railscamp X, he is excited to continue working with the Australian Ruby community.</p>
+            <p>The role of treasurer is to take care of all the cash flow of organization. Main responsibilities will to manage finance, manage expenses and income of the organization.</p>
           </div>
           <div class='contact'>
-            <a href='http://twitter.com/vonconrad'>@vonconrad</a>
-            <a href='http://au.linkedin.com/in/vonconrad'>LinkedIn</a>
-            <a href='https://github.com/vonconrad'>Github</a>
-          </div>
-        </article>
-        <article>
-          <img src='/images/committee-members/ben-avatar.jpg' />
-          <header>
-            <h3>Ben Schwarz</h3>
-            <p class='position'>General Member</p>
-          </header>
-          <div class='bio'>
-            <p>Ben funds his love of good food (at home) and sake (in bars) by designing sophisticated web applications using standards-based technology.</p>
-            <p>He organised Railscamp 6, in Melbourne, helped run the Melbourne Ruby user group for a couple of years and more recently joined the W3C CSS Working group as an 'invited expert'. Otherwise, he runs <a href="http://theint.ro">The Intro</a>, which he runs to facilitate affordable, professional web focused events that would not exist otherwise.</p>
-          </div>
-          <div class='contact'>
-            <a href='http://twitter.com/benschwarz'>@benschwarz</a>
-            <a href='http://germanforblack.com'>Ben's site</a>
-          </div>
-        </article>
-        <article>
-          <img src='/images/committee-members/daniel-avatar.jpg' />
-          <header>
-            <h3>Daniel Draper</h3>
-            <p class='position'>General Member</p>
-          </header>
-          <div class='bio'>
-            <p>Dan is CEO of Rails dev shop, <a href="http://www.codefire.com/">Codefire</a> and has been working with Rails since 2006. He is actively involved in Adelaide.rb and the Ruby community at large. Dan is passionate about promoting software and web development as a career choice for younger people and about open source software in business.</p>
-          </div>
-          <div class='contact'>
-            <a href='http://twitter.com/danieldraper'>@danieldraper</a>
-            <a href='http://www.linkedin.com/in/ddraper'>Linkedin</a>
+            <a href='http://twitter.com/rubyindia'>@rubyindia</a>
+            <a href='http://au.linkedin.com/in/rubyindia'>LinkedIn</a>
+            <a href='https://github.com/rubyindia'>Github</a>
           </div>
         </article>
       </section>
