file and folder renamed

--- a/site/index.html
+++ b/site/index.html
@@ -45,22 +45,22 @@
         </p>
         <ul class='meetup-locations'>
           <li>
-            <a href='/meetups/adl.html' id='adl'>Bangalore</a>
+            <a href='/meetups/bng.html' id='bng'>Bangalore</a>
           </li>
           <li>
-            <a href='/meetups/bne.html' id='bne'>Pune</a>
+            <a href='/meetups/pun.html' id='pun'>Pune</a>
           </li>
           <li>
-            <a href='/meetups/can.html' id='can'>Delhi NCR</a>
+            <a href='/meetups/del.html' id='del'>Delhi NCR</a>
           </li>
           <li>
-            <a href='/meetups/mel.html' id='mel'>Hyderabad</a>
+            <a href='/meetups/hyd.html' id='hyd'>Hyderabad</a>
           </li>
           <li>
-            <a href='/meetups/per.html' id='per'>Chennai</a>
+            <a href='/meetups/chn.html' id='chn'>Chennai</a>
           </li>
           <li>
-            <a href='/meetups/syd.html' id='syd'>Kochi</a>
+            <a href='/meetups/koc.html' id='koc'>Kochi</a>
           </li>
         </ul>
       </section>
@@ -75,12 +75,12 @@
       <section>
         <h3>Join Ruby India</h3>
         <p>
-          Joining Ruby India is free. <a href="/join-ruby-australia.html">Join!</a>
+          Joining Ruby India is free. <a href="/join-ruby-india.html">Join!</a>
         </p>
         <h3>Contributing to the site</h3>
         <p>
           The site's source is hosted on Github:
-          <a href="https://github.com/chetanmittal/rubyin.org">https://github.com/chetanmittal/rubyin.org</a>.  Please refer to the <a href="https://github.com/chetanmittal/rubyin.org#readme">README</a> there for more details.
+          <a href="https://github.com/rubyin/rubyin.org">https://github.com/rubyin/rubyin.org</a>.  Please refer to the <a href="https://github.com/rubyin/rubyin.org#readme">README</a> there for more details.
         </p>
       </section>
     </section>
