towards bringing site to ruby india

--- a/site/committee-members.html
+++ b/site/committee-members.html
@@ -23,13 +23,13 @@
             <a href='/committee-members.html'>Committee Members</a>
             <a href='/#meetups'>Meetups</a>
             <a href='/#railscamp'>Railscamp</a>
-            <a href='https://github.com/rails-oceania/roro/wiki'>Wiki</a>
-            <a href='https://github.com/rails-oceania/roro/wiki/Mentoring'>Mentoring</a>
+            <a href='https://github.com/rubyindia/wiki'>Wiki</a>
+            <a href='https://github.com/rubyindia/wiki/Mentoring'>Mentoring</a>
           </li>
         </ul>
       </nav>
       <p>
-        Twitter: <a href="http://twitter.com/rubyindia">@rubyinorg</a>
+        Twitter: <a href="http://twitter.com/rubyinorg">@rubyinorg</a>
       </p>
     </aside>
     <section role='main'>
@@ -48,7 +48,7 @@
             <p>There might be some travelling required.</p>
           </div>
           <div class='contact'>
-            <a href='http://twitter.com/rubyindia'>@rubyindia</a>
+            <a href='http://twitter.com/rubyinorg'>@rubyinorg</a>
             <a href='http://in.linkedin.com/in/rubyindia'>LinkedIn</a>
             <a href='https://github.com/rubyindia'>Github</a>
           </div>
@@ -64,7 +64,7 @@
             <p>There might be some travelling required.</p>
           </div>
           <div class='contact'>
-            <a href='http://twitter.com/rubyindia'>@rubyindia</a>
+            <a href='http://twitter.com/rubyinorg'>@rubyinorg</a>
             <a href='http://in.linkedin.com/in/rubyindia'>Linkedin</a>
           </div>
         </article>
@@ -79,7 +79,7 @@
             <p>There might be some travelling required.</p>
           </div>
           <div class='contact'>
-            <a href='http://twitter.com/rubyindia'>@rubyindia</a>
+            <a href='http://twitter.com/rubyinorg'>@rubyinorg</a>
             <a href='http://in.linkedin.com/in/rubyindia'>LinkedIn</a>
             <a href='https://github.com/rubyindia'>Github</a>
             <a href='http://zerply.com/rubyindia'>Zerply</a>
@@ -95,7 +95,7 @@
             <p>The role of treasurer is to take care of all the cash flow of organization. Main responsibilities will to manage finance, manage expenses and income of the organization.</p>
           </div>
           <div class='contact'>
-            <a href='http://twitter.com/rubyindia'>@rubyindia</a>
+            <a href='http://twitter.com/rubyinorg'>@rubyinorg</a>
             <a href='http://au.linkedin.com/in/rubyindia'>LinkedIn</a>
             <a href='https://github.com/rubyindia'>Github</a>
           </div>
