--- a/site/index.html
+++ b/site/index.html
@@ -23,13 +23,13 @@
             <a href='/committee-members.html'>Committee Members</a>
             <a href='/#meetups'>Meetups</a>
             <a href='/#railscamp'>Railscamp</a>
-            <a href='https://github.com/rails-oceania/roro/wiki'>Wiki</a>
-            <a href='https://github.com/rails-oceania/roro/wiki/Mentoring'>Mentoring</a>
+            <a href='https://github.com/rubyindia/wiki'>Wiki</a>
+            <a href='https://github.com/rubyindia/wiki/Mentoring'>Mentoring</a>
           </li>
         </ul>
       </nav>
       <p>
-        Twitter: <a href="http://twitter.com/rubyindia">@rubyinorg</a>
+        Twitter: <a href="http://twitter.com/rubyinorg">@rubyinorg</a>
       </p>
     </aside>
     <section role='main'>
@@ -80,7 +80,7 @@
         <h3>Contributing to the site</h3>
         <p>
           The site's source is hosted on Github:
-          <a href="https://github.com/rubyin/rubyin.org">https://github.com/rubyin/rubyin.org</a>.  Please refer to the <a href="https://github.com/rubyin/rubyin.org#readme">README</a> there for more details.
+          <a href="https://github.com/rubyindia/rubyin.org">https://github.com/rubyindia/rubyin.org</a>.  Please refer to the <a href="https://github.com/rubyindia/rubyin.org#readme">README</a> there for more details.
         </p>
       </section>
     </section>
