--- a/site/join-ruby-india.html
+++ b/site/join-ruby-india.html
@@ -34,23 +34,8 @@
     </aside>
     <section role='main'>
       <section>
-        <h3>Canberra</h3>
-        <article>
-          <h4>Next Meetup</h4>
-          <p>TBA</p>
-          <p>Presentations:</p>
-          <ul>
-            <li>TBA</li>
-          </ul>
-        </article>
-        <article>
-          <h4>Organisers</h4>
-          <p>Max Wheeler (<a href="http://twitter.com/makenosound">@makenosound</a>), Shoaib Burq (<a href="http://twitter.com/sabman">@sabman</a>), Hugh Evans (<a href="http://twitter.com/hughevans">@hughevans</a>), Michael MacDonald (<a href="http://twitter.com/schlick">@schlick</a>) and Jared Fraser (<a href="http://twitter.com/modsognir">@modsognir</a>).</p>
-        </article>
-        <article>
-          <h4>Schedule</h4>
-          <p>For more information about Canberra Ruby meetups, visit <a href="http://canberraruby.com/">the Canberra Ruby Crew</a>.</p>
-        </article>
+        <h3>Join Ruby India</h3>
+        <iframe>src="https://docs.google.com/spreadsheet/embeddedform?formkey=dGZGSTdTbnV2WWZ0ZUo2ZVNzSTE2WlE6MQ" width="760" height="933" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
       </section>
     </section>
     <footer role='contentinfo'>
