--- a/site/meetups/koc.html
+++ b/site/meetups/koc.html
@@ -23,13 +23,13 @@
             <a href='/committee-members.html'>Committee Members</a>
             <a href='/#meetups'>Meetups</a>
             <a href='/#railscamp'>Railscamp</a>
-            <a href='https://github.com/rails-oceania/roro/wiki'>Wiki</a>
-            <a href='https://github.com/rails-oceania/roro/wiki/Mentoring'>Mentoring</a>
+            <a href='https://github.com/rubyindia/wiki'>Wiki</a>
+            <a href='https://github.com/rubyindia/wiki/Mentoring'>Mentoring</a>
           </li>
         </ul>
       </nav>
       <p>
-        Twitter: <a href="http://twitter.com/rubyindia">@rubyinorg</a>
+        Twitter: <a href="http://twitter.com/rubyinorg">@rubyinorg</a>
       </p>
     </aside>
     <section role='main'>
