embedded membership form

--- a/site/join-ruby-india.html
+++ b/site/join-ruby-india.html
@@ -35,7 +35,9 @@
     <section role='main'>
       <section>
         <h3>Join Ruby India</h3>
-        <iframe>src="https://docs.google.com/spreadsheet/embeddedform?formkey=dGZGSTdTbnV2WWZ0ZUo2ZVNzSTE2WlE6MQ" width="760" height="933" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <iframe frameborder='0' height='970' marginheight='0' marginwidth='0' src='https://docs.google.com/spreadsheet/embeddedform?formkey=dGZGSTdTbnV2WWZ0ZUo2ZVNzSTE2WlE6MQ' width='760'>
+          Loading...
+        </iframe>
       </section>
     </section>
     <footer role='contentinfo'>
