major changes towards completion

--- a/site/meetups/bng.html
+++ b/site/meetups/bng.html
@@ -34,7 +34,7 @@
     </aside>
     <section role='main'>
       <section>
-        <h3>Adelaide Ruby</h3>
+        <h3>Bangalore Ruby</h3>
         <article>
           <h4>Next Meetup</h4>
           <p>TBA</p>
@@ -45,11 +45,11 @@
         </article>
         <article>
           <h4>Organisers</h4>
-          <p>Daniel Draper (<a href="http://twitter.com/danieldraper">@danieldraper</a>) and Michael Noack.</p>
+          <p>Sidu Ponappa (<a href="http://twitter.com/siduponappa">@siduponappa</a>) and Hemant (<a href="http://twitter.com/gnufied">@gnufied</a>).</p>
         </article>
         <article>
           <h4>Schedule</h4>
-          <p>To find out more about the Adelaide Ruby group, visit <a href="http://adelaiderb.com">adelaide.rb</a>.</p>
+          <p>To find out more about the Bangalore Ruby group, visit <a href="http://bangaloreruby.org">Bangalore Ruby User Group</a>.</p>
         </article>
       </section>
     </section>
