--- a/site/meetups/del.html
+++ b/site/meetups/del.html
@@ -34,7 +34,7 @@
     </aside>
     <section role='main'>
       <section>
-        <h3>Canberra</h3>
+        <h3>Delhi NCR</h3>
         <article>
           <h4>Next Meetup</h4>
           <p>TBA</p>
@@ -45,11 +45,11 @@
         </article>
         <article>
           <h4>Organisers</h4>
-          <p>Max Wheeler (<a href="http://twitter.com/makenosound">@makenosound</a>), Shoaib Burq (<a href="http://twitter.com/sabman">@sabman</a>), Hugh Evans (<a href="http://twitter.com/hughevans">@hughevans</a>), Michael MacDonald (<a href="http://twitter.com/schlick">@schlick</a>) and Jared Fraser (<a href="http://twitter.com/modsognir">@modsognir</a>).</p>
+          <p>Whoami (<a href="http://twitter.com/whoami">@whoami</a>).</p>
         </article>
         <article>
           <h4>Schedule</h4>
-          <p>For more information about Canberra Ruby meetups, visit <a href="http://canberraruby.com/">the Canberra Ruby Crew</a>.</p>
+          <p>For more information about Delhi Ruby meetups, visit <a href="http://delhiruby.org/">Delhi Ruby User Group</a>.</p>
         </article>
       </section>
     </section>
