--- a/site/meetups/chn.html
+++ b/site/meetups/chn.html
@@ -34,7 +34,7 @@
     </aside>
     <section role='main'>
       <section>
-        <h3>Perth</h3>
+        <h3>Chennai</h3>
         <article>
           <h4>Next Meeting</h4>
           <p>None upcoming (see Organisers)</p>
@@ -45,16 +45,11 @@
         </article>
         <article>
           <h4>Organisers</h4>
-          <p>There are currently no active organizers for the Perth group - If you're interested in organising it, please contact Darcy using the information below.</p>
-          <h4>Previous Organizers</h4>
-          <ul>
-            <li>Darcy Laycock (<a href="http://twitter.com/sutto">@sutto</a>).</li>
-            <li>The Frontier Group / Matt Lambie (<a href="http://twitter.com/mlambie">@mlambie</a>).</li>
-          </ul>
+          <p>There are currently no active organizers for the Chennai group - If you're interested in organising it, please drop an email to rubyindorg@gmail.com</p>
         </article>
         <article>
           <h4>Schedule</h4>
-          <p>For more information about Perth Ruby meetups, visit <a href="http://www.perthrubyonrails.com.au/">Perth Ruby on Rails</a>.</p>
+          <p>For more information about Chennai Ruby meetups, visit <a href="http://www.chennairuby.org/">Chennai Ruby User Group</a>.</p>
         </article>
       </section>
     </section>
