--- a/site/meetups/hyd.html
+++ b/site/meetups/hyd.html
@@ -34,46 +34,10 @@
     </aside>
     <section role='main'>
       <section>
-        <h3>Melbourne Ruby</h3>
-        <article>
-          <h4>Next Meeting</h4>
-          <p>
-            Thursday 31st May 2012<br>
-            <a href="http://g.co/maps/9ykba">Inspire9</a><br>
-            Level 1, 41-43 Stewart St<br>
-            Richmond<br>
-            6:00pm for a 6:30pm start!
-          </p>
-          <p>See you there!</p>
-        </article>
+        <h3>Hyderabad Ruby</h3>
         <article>
           <h4>Organisers</h4>
-          <p>Justin French (<a href="http://twitter.com/justinfrench">@justinfrench</a>).</p>
-        </article>
-        <article>
-          <h4>Format</h4>
-          <ul>
-            <li>News &amp; events</li>
-            <li>Who's hiring, who's available</li>
-            <li>Lightning talks, tutorials and presentations on Ruby and related topics</li>
-            <li>Dinner and drinks at the Corner Hotel</li>
-          </ul>
-        </article>
-        <article>
-          <h4>Get Involved</h4>
-          <p>Chatter about upcoming meetings takes place on the <a href="https://groups.google.com/forum/?fromgroups#!forum/rails-oceania">Ruby or Rails Oceania</a> Google Group.</p>
-          <p>Presenters, organisers and sponsors are always welcome.</p>
-        </article>
-        <article>
-          <h4>Schedule</h4>
-          <p>Melbourne Ruby meetings happen on the last Thursday of every month, with the exception of December (which has a social event sometime in the middle of the month).</p>
-        </article>
-        <article>
-          <h4>Archived Meeting Notes</h4>
-          <ul>
-            <li><a href="/meetups/mel/april-2012.html">April 2012</a></li>
-          </ul>
-          <p>Previous meeting notes from the last several years are not recorded here, sadly. You may find them out in the internet if you're particularly keen.</p>
+          <p>If you want to organize this please drop an email to rubyin.org@gmail.com</p>
         </article>
       </section>
     </section>
