updated twitter id of Sidu Ponnappa

--- a/site/meetups/bng.html
+++ b/site/meetups/bng.html
@@ -45,7 +45,7 @@
         </article>
         <article>
           <h4>Organisers</h4>
-          <p>Sidu Ponappa (<a href="http://twitter.com/siduponappa">@siduponappa</a>) and Hemant (<a href="http://twitter.com/gnufied">@gnufied</a>).</p>
+          <p>Sidu Ponappa (<a href="http://twitter.com/ponnappa">@ponnappa</a>) and Hemant (<a href="http://twitter.com/gnufied">@gnufied</a>).</p>
         </article>
         <article>
           <h4>Schedule</h4>
