--- a/site/committee-members.html
+++ b/site/committee-members.html
@@ -103,7 +103,8 @@
       </section>
     </section>
     <footer role='contentinfo'>
-      <small>&copy; 2012 Ruby India</small>
+      <small>&copy; 2012 Ruby India. Most of the webdesign is pinched from Ruby Australia.</small>
+      <small>Built using Jekyll, HTML and CSS. Hosted on Github.</small>
     </footer>
   </body>
 </html>
