--- a/site/index.html
+++ b/site/index.html
@@ -23,8 +23,8 @@
             <a href='/committee-members.html'>Committee Members</a>
             <a href='/#meetups'>Meetups</a>
             <a href='/#railscamp'>Railscamp</a>
-            <a href='https://github.com/rubyindia/wiki'>Wiki</a>
-            <a href='https://github.com/rubyindia/wiki/Mentoring'>Mentoring</a>
+            <a href='https://github.com/rubyindia/rubyin.org/wiki'>Wiki</a>
+            <a href='https://github.com/rubyindia/rubyin.org/wiki/Mentoring'>Mentoring</a>
           </li>
         </ul>
       </nav>
