added/updated linkedin group link

--- a/site/committee-members.html
+++ b/site/committee-members.html
@@ -30,6 +30,7 @@
       </nav>
       <p>
         Twitter: <a href="http://twitter.com/rubyinorg">@rubyinorg</a>
+        Linkedin: <a href="http://www.linkedin.com/groups/Ruby-India-Organization-4478579?gid=4478579&trk=hb_side_g">Ruby India</a>
       </p>
     </aside>
     <section role='main'>
@@ -49,7 +50,7 @@
           </div>
           <div class='contact'>
             <a href='http://twitter.com/rubyinorg'>@rubyinorg</a>
-            <a href='http://in.linkedin.com/in/rubyindia'>LinkedIn</a>
+            <a href='http://www.linkedin.com/groups/Ruby-India-Organization-4478579?gid=4478579&amp;trk=hb_side_g'>LinkedIn</a>
             <a href='https://github.com/rubyindia'>Github</a>
           </div>
         </article>
@@ -65,7 +66,7 @@
           </div>
           <div class='contact'>
             <a href='http://twitter.com/rubyinorg'>@rubyinorg</a>
-            <a href='http://in.linkedin.com/in/rubyindia'>Linkedin</a>
+            <a href='http://www.linkedin.com/groups/Ruby-India-Organization-4478579?gid=4478579&amp;trk=hb_side_g'>Linkedin</a>
           </div>
         </article>
         <article>
@@ -80,7 +81,7 @@
           </div>
           <div class='contact'>
             <a href='http://twitter.com/rubyinorg'>@rubyinorg</a>
-            <a href='http://in.linkedin.com/in/rubyindia'>LinkedIn</a>
+            <a href='http://www.linkedin.com/groups/Ruby-India-Organization-4478579?gid=4478579&amp;trk=hb_side_g'>LinkedIn</a>
             <a href='https://github.com/rubyindia'>Github</a>
             <a href='http://zerply.com/rubyindia'>Zerply</a>
           </div>
@@ -96,7 +97,7 @@
           </div>
           <div class='contact'>
             <a href='http://twitter.com/rubyinorg'>@rubyinorg</a>
-            <a href='http://au.linkedin.com/in/rubyindia'>LinkedIn</a>
+            <a href='http://www.linkedin.com/groups/Ruby-India-Organization-4478579?gid=4478579&amp;trk=hb_side_g'>LinkedIn</a>
             <a href='https://github.com/rubyindia'>Github</a>
           </div>
         </article>
